--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,11 @@
   <string name="input_hint">FB</string>
   <string name="input_prefill"></string>
   <string name="network_toast">Uh-oh! This app requires an internet connection</string>
+
+
+  <string name="invalid_data">This should only be called when Cursor is valid</string>
+  <string name="invalid_position">Could not move Cursor to position: </string>
+  <string name="stock_already_saved">This stock is already saved</string>
+  <string name="refreshing">Refreshing</string>
+
 </resources>
