--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,16 @@
 <resources>
-  <string name="app_name">Stock Hawk</string>
+    <string name="app_name" translatable="false">Stock Hawk</string>
 
-  <string name="action_example">Example action</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_refresh">Refresh</string>
+    <string name="action_change_units">Change Units</string>
+    <string name="symbol_search">Symbol Search</string>
+    <string name="content_test">Search for a Stock Symbol</string>
+    <string name="input_hint" translatable="false">FB</string>
+    <string name="input_preFill" translatable="false">""</string>
+    <string name="network_toast">Uh-oh! This app requires an internet connection</string>
 
-  <string name="action_settings">Settings</string>
-  <string name="action_change_units">Change Units</string>
-  <string name="symbol_search">Symbol Search</string>
-  <string name="content_test">Search for a Stock Symbol</string>
-  <string name="input_hint">FB</string>
-  <string name="input_prefill"></string>
-  <string name="network_toast">Uh-oh! This app requires an internet connection</string>
-
-
-  <string name="invalid_data">This should only be called when Cursor is valid</string>
-  <string name="invalid_position">Could not move Cursor to position: </string>
-  <string name="stock_already_saved">This stock is already saved</string>
-  <string name="refreshing">Refreshing</string>
+    <string name="stock_already_saved">This stock is already saved</string>
+    <string name="refreshing">Refreshing</string>
 
 </resources>
