--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -5,7 +5,8 @@
     <string name="symbol_search">رمز البحث</string>
     <string name="content_test">بحث عن الأوراق المالية رمز</string>
     <string name="network_toast">اه اوه! هذا التطبيق يتطلب اتصال بالإنترنت</string>
-
+    <string name="fab_add">إضافة</string>
     <string name="stock_already_saved">يتم حفظ هذه الأسهم بالفعل</string>
     <string name="refreshing">منعش</string>
+    <string name="no_data">لا تتوافر بيانات</string>
 </resources>
