--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,11 @@
     <string name="input_hint" translatable="false">FB</string>
     <string name="input_preFill" translatable="false">""</string>
     <string name="network_toast">Uh-oh! This app requires an internet connection</string>
-
+    <string name="fab_add">Add</string>
     <string name="stock_already_saved">This stock is already saved</string>
     <string name="refreshing">Refreshing</string>
+    <string name="no_data">No data available</string>
+    <string name="loading">Loading</string>
+    <string name="please_wait">Please wait</string>
 
 </resources>
