--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name" translatable="false">Stock Hawk</string>
 
     <string name="action_settings">Settings</string>
-    <string name="action_refresh">Refresh</string>
+    <string name="action_sync">Sync</string>
     <string name="action_change_units">Change Units</string>
     <string name="symbol_search">Symbol Search</string>
     <string name="content_test">Search for a Stock Symbol</string>
@@ -11,9 +11,8 @@
     <string name="network_toast">Uh-oh! This app requires an internet connection</string>
     <string name="fab_add">Add</string>
     <string name="stock_already_saved">This stock is already saved</string>
-    <string name="refreshing">Refreshing</string>
+    <string name="syncing">Syncing</string>
     <string name="no_data">No data available</string>
-    <string name="loading">Loading</string>
     <string name="please_wait">Please wait</string>
 
 </resources>
